Add replace IDNO function for api
